# project_test

./: .gitignore  README.md
.github/workflows/: release.yml
backend/: Cargo.toml  Config.toml
backend/migrations/: 20250610134216_create_users_table.sql
backend/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
backend/src/handlers/: auth_handler.rs
backend/src/services/: auth_service.rs  mod.rs
frontend/: package-lock.json
frontend/src/: App.css  main.tsx
frontend/src/pages/: Login.tsx
